--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.0.2"
+  }
 }
